# hcs-sandbox

./: Cargo.toml  PLAN.md  README.md  setup.bat
.github/workflows/: ci.yml
deploy/: azuredeploy.json  deploy.ps1  deploy.sh  vm-setup.ps1
scripts/: create-template.ps1  quick-setup.ps1  test-e2e.ps1  use-existing-vm.ps1
src/: config.rs  db.rs  error.rs  hvsocket.rs  lib.rs  main.rs  network.rs  orchestrator.rs  pool.rs  sandbox.rs  scheduler.rs
src/api/: handlers.rs  mod.rs  server.rs  types.rs
src/hcs/: compute.rs  config.rs  layer.rs  mod.rs  operation.rs  system.rs
src/hyperv/: commands.rs  mod.rs
src/models/: agent.rs  mod.rs  pool.rs  template.rs  vm.rs
tests/: e2e.rs
