[package]
name = "hyperv-kube"
version = "0.1.0"
edition = "2021"
description = "Lightweight Hyper-V orchestrator for UI automation agents"
license = "MIT"

[lib]
name = "hyperv_kube"
path = "src/lib.rs"

[[bin]]
name = "hvkube"
path = "src/bin/hvkube.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.16"

[dev-dependencies]
tempfile = "3.0"
