[package]
name = "hcs-kube"
version = "0.1.0"
edition = "2021"
description = "Minimal Kubernetes-like orchestrator for HCS sandboxes"
license = "MIT"

[lib]
name = "hcs_kube"
path = "src/lib.rs"

[[bin]]
name = "hcs-kube"
path = "src/bin/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_HostComputeSystem",
    "Win32_System_HostComputeNetwork",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_Vhd",
    "Win32_Networking_WinSock",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
tokio = { version = "1.0", features = ["net", "io-util", "sync", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
mockall = "0.13"
tempfile = "3.0"
